--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "source-map-explorer": "^1.6.0"
   },
